--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,59 @@
   .animate-scroll {
     animation: scroll 20s linear infinite;
   }
+
+.S{
+  width: 64px;
+  padding-top: 6px;
+  border-radius: 0.225rem;
+  height: 64px;
+  background-color: #008a51;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+}
+.Bus, .RE, .RB, .BRB, .ALX{
+  width: 64px;
+  padding-top: 6px;
+  border-radius: 0.225rem;
+  height: 64px;
+  background-color: #878c96;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+}
+.STR{
+  width: 64px;
+  padding-top: 6px;
+  border-radius: 0.225rem;
+  height: 64px;
+  background-color: red;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+}
+.U{
+  width: 64px;
+  padding-top: 6px;
+  border-radius: 0.225rem;
+  height: 64px;
+  background-color: #0664ab;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+}
+.ICE{
+  width: 64px;
+  padding-top: 6px;
+  border-radius: 0.225rem;
+  height: 64px;
+  background-color: #303030;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+}
