--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,58 +19,20 @@
     animation: scroll 20s linear infinite;
   }
 
-.S{
-  width: 64px;
-  padding-top: 6px;
-  border-radius: 0.225rem;
-  height: 64px;
-  background-color: #008a51;
-  color: white;
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
+
+.status-bar{
+  width: 1%;
+  animation: statusbar-animation 0.8s ease-in forwards infinite;
 }
-.Bus, .RE, .RB, .BRB, .ALX{
-  width: 64px;
-  padding-top: 6px;
-  border-radius: 0.225rem;
-  height: 64px;
-  background-color: #878c96;
-  color: white;
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
-}
-.STR{
-  width: 64px;
-  padding-top: 6px;
-  border-radius: 0.225rem;
-  height: 64px;
-  background-color: red;
-  color: white;
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
-}
-.U{
-  width: 64px;
-  padding-top: 6px;
-  border-radius: 0.225rem;
-  height: 64px;
-  background-color: #0664ab;
-  color: white;
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
-}
-.ICE{
-  width: 64px;
-  padding-top: 6px;
-  border-radius: 0.225rem;
-  height: 64px;
-  background-color: #303030;
-  color: white;
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
+@keyframes statusbar-animation {
+   0%, 20%{
+      width: 10%;
+   }
+   25%, 45%{
+    width: 20%;
+   }
+   50%, 70% { width: 40%; }
+   75%, 95% { width: 80%; }
+   100% { width: 100%; }
+
 }
