--- a/app/layout.css
+++ b/app/layout.css
@@ -1,43 +1,70 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.delay{
-    color: rgb(239 68 68);
+.delay {
+  color: rgb(239 68 68);
 }
-.ontime{
-    color: rgb(22 163 74);
+.ontime {
+  color: rgb(22 163 74);
 }
 @keyframes scroll {
-    0%, 20% { transform: translateY(0); opacity: 1; }
-    25%, 45% { transform: translateY(-12rem); opacity: 1; }
-    50%, 70% { transform: translateY(-24rem); opacity: 1; }
-    75%, 95% { transform: translateY(-48rem); opacity: 1; }
-    100% { transform: translateY(-48rem); opacity: 0; }
+  0%,
+  20% {
+    transform: translateY(0);
+    opacity: 1;
   }
-  
-  .animate-scroll {
-    animation: scroll 20s linear infinite;
+  25%,
+  45% {
+    transform: translateY(-12rem);
+    opacity: 1;
   }
+  50%,
+  70% {
+    transform: translateY(-24rem);
+    opacity: 1;
+  }
+  75%,
+  95% {
+    transform: translateY(-48rem);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-48rem);
+    opacity: 0;
+  }
+}
 
+.animate-scroll {
+  animation: scroll 20s linear infinite;
+}
 
-.status-bar{
+.status-bar {
   width: 1%;
   animation: statusbar-animation 0.8s ease-in forwards infinite;
 }
 @keyframes statusbar-animation {
-   0%, 20%{
-      width: 10%;
-   }
-   25%, 45%{
+  0%,
+  20% {
+    width: 10%;
+  }
+  25%,
+  45% {
     width: 20%;
-   }
-   50%, 70% { width: 40%; }
-   75%, 95% { width: 80%; }
-   100% { width: 100%; }
-
+  }
+  50%,
+  70% {
+    width: 40%;
+  }
+  75%,
+  95% {
+    width: 80%;
+  }
+  100% {
+    width: 100%;
+  }
 }
-.font-fix{
+.font-fix {
   font-family: Myriad Pro !important;
   font-style: normal !important;
-  font-weight:400;
+  font-weight: 400;
 }
